# armpit

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  armpit.c  armpit.h  makefile
.github/workflows/: cmake.yml
